--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,12 +9,10 @@ spring:
     username: root
     password: 123456
 
-  jpa:
-    show-sql: on
-    hibernate:
-      ddl-auto: update
+  # Logger Config
+logging:
+    level:
+      com.baomidou.mybatisplus.samples.quickstart: debug
 
-
-#classpath:/templates/index.html
 server:
   port: 8080
